page overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ div.slider:after {
   padding-top: 6rem;
   padding-bottom: 6rem;
   position: relative;
+  height: 250px;
 }
 
 .slider h2 {
@@ -111,6 +112,13 @@ div.slider:after {
   cursor: pointer;
 }
 
+@media screen and (min-width: 765px) {
+  .slide {
+    line-height: 28px;
+    font-size: 38px;
+    height: 600px;
+  }
+}
 @media screen and (min-width: 1024px) {
   .slider {
     height: 600px;
@@ -141,28 +149,27 @@ div.slider:after {
     font-size: 24px;
   }
 }
-.header-top {
+.header-wrap .header-top {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 4.5% 5% 1.5% 5%;
-  position: relative;
 }
-.header-top .logo {
+.header-wrap .header-top .logo {
   font-size: 18px;
   color: #34373a;
   font-family: "Lora", serif;
   font-weight: 700;
   text-decoration: none;
 }
-.header-top nav ul {
+.header-wrap .header-top nav ul {
   display: flex;
   justify-content: center;
   align-items: center;
   list-style-type: none;
   margin: 0;
 }
-.header-top nav li {
+.header-wrap .header-top nav li {
   padding: 0.6rem;
   font-family: "Lora", serif;
   font-size: 16px;
@@ -171,26 +178,31 @@ div.slider:after {
 }
 
 @media screen and (min-width: 765px) {
-  .header-top {
-    max-width: 1000px;
-    margin: auto;
+  .header-wrap {
+    position: relative;
+    overflow: hidden;
   }
-  .header-top :before {
+  .header-wrap :before {
     content: "";
     position: absolute;
     left: auto;
     bottom: 0;
     height: 15px;
-    width: 100%;
+    left: auto;
+    width: 1000px;
     border-bottom: 1px solid #e6e6e6;
   }
-  .header-top .logo {
+  .header-wrap .header-top {
+    max-width: 1000px;
+    margin: auto;
+  }
+  .header-wrap .header-top .logo {
     font-size: 22px;
   }
-  .header-top div {
+  .header-wrap .header-top div {
     display: none;
   }
-  .header-top nav {
+  .header-wrap .header-top nav {
     display: flex;
   }
 }
