--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -14,6 +14,8 @@ div.slider:after {
   padding-top: 6rem;
   padding-bottom: 6rem;
   position: relative;
+height:250px
+ 
 }
 
 .slider h2 {
@@ -37,6 +39,7 @@ div.slider:after {
   line-height: 30px;
   font-size: 20px;
   background-color: #e5e8ea;
+ 
 }
 
 .dot-wrapper {
@@ -65,6 +68,13 @@ div.slider:after {
 }
 
 @media screen and (min-width: 765px) {
+
+    .slide {
+        line-height: 28px;
+        font-size: 38px;
+        height:600px
+      }
+
 }
 @media screen and (min-width: 1024px) {
   .slider {
